--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
+
+body {
+  @apply bg-dark-very-dark-blue;
+  font-family: "Josefin Sans", sans-serif;
+}
+
+.visually-hidden {
+  position: relative;
+  left: 9999px;
+}
