--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap')
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap")
 layer(base);
 
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @theme {
-  --background-image-Mobile-dark: url('/bg-mobile-dark.jpg');
-  --background-image-Mobile-light: url('/bg-mobile-light.jpg');
-  --background-image-Desktop-dark: url('/bg-desktop-dark.jpg');
-  --background-image-Desktop-light: url('/bg-desktop-light.jpg');
+  --background-image-Mobile-dark: url("/bg-mobile-dark.jpg");
+  --background-image-Mobile-light: url("/bg-mobile-light.jpg");
+  --background-image-Desktop-dark: url("/bg-desktop-dark.jpg");
+  --background-image-Desktop-light: url("/bg-desktop-light.jpg");
 
   --color-bright-blue: hsl(220, 98%, 61%);
   --color-light-very-light-gray: hsl(0, 0%, 98%);
@@ -57,3 +57,9 @@ body {
   position: relative;
   left: 9999px;
 }
+
+button {
+  cursor: pointer;
+}
+
+
