--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,14 @@
   --color-main-bg: hsl(235, 21%, 11%);
   --color-component-bg: hsl(235, 24%, 19%);
   --color-hover-text: hsl(236, 33%, 92%);
-  --color-input: hsl(233, 14%, 35%);
-
+  --color-input: #333a5c;
+  --color-gradfrom: hsl(192, 100%, 67%);
+  --color-gradto: hsl(280, 87%, 65%);
   --spacing-275: 275px;
 
   --tracking-10px: 10px;
+  --tracking-5px: 5px;
+  --tracking-3px: 3px;
 
   --breakpoint-custom: 370px;
 }
