--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,11 @@ button {
   cursor: pointer;
 }
 
+button:disabled {
+  cursor: not-allowed;
+  opacity: 50%;
+}
+
 iconify-icon {
   display: inline-block;
   width: 1em;
